--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
   <input type="text" id="store" placeholder="請輸入門市代碼" />
   <label>點餐方式 </label>
   <select id="k">
-    <option value="2">2 = 預定</option>
-    <option value="3">3 = 點餐機</option>
-    <option value="6">6 = 現場點餐</option>
+    <option value="2">預定</option>
+    <option value="3">點餐機</option>
+    <option value="6">現場點餐</option>
   </select>
   <label>訂購方式 </label>
   <select id="o">
-    <option value="1">1 = 內用</option>
-    <option value="2">2 = 外帶</option>
-    <option value="3">3 = 車道</option>
-    <option value="4">4 = 外送</option>
+    <option value="1">內用</option>
+    <option value="2">外帶</option>
+    <option value="3">車道</option>
   </select>
   <button onclick="generateLink()">🎯 產生問卷連結</button>
   <div id="result"></div>
