--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <h2>🍗 KFC 問卷連結產生器</h2>
   <label>門市代碼 </label>
-  <input type="text" id="store" placeholder="請輸入門市代碼" />
+  <input type="text" id="store" placeholder="門市代碼"/>
   <label>點餐方式 </label>
   <select id="k">
     <option value="2">預定</option>
