--- a/index.html
+++ b/index.html
@@ -1,96 +1,112 @@
-
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KFC 問卷連結產生器</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 40px auto;
-      padding: 20px;
-      border-radius: 10px;
-      background-color: #fefefe;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      font-family: "Microsoft JhengHei", Arial, sans-serif;
+      background-color: #fdf8f3; /* 米白底 */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 30px;
     }
     h2 {
       text-align: center;
-      color: #d42113;
+      color: #a9745a; /* 奶茶色 */
     }
-    label, select, input, button {
+    .container {
       width: 100%;
-      margin-top: 10px;
-      padding: 10px;
+      max-width: 400px;
+      background: #fffaf2;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.05);
+    }
+    label {
+      display: block;
+      margin-top: 20px;
+      font-weight: bold;
+      color: #5b3e2b;
+    }
+    select, input {
+      width: 100%;
+      padding: 12px;
+      margin-top: 6px;
       font-size: 16px;
+      border: 1px solid #decfc1;
+      border-radius: 6px;
+      background-color: #fffdf9;
     }
     button {
-      background-color: #d42113;
+      width: 100%;
+      padding: 14px;
+      font-size: 16px;
+      margin-top: 30px;
+      background-color: #c8a68a; /* 奶茶色 */
       color: white;
       border: none;
+      border-radius: 8px;
       cursor: pointer;
-      border-radius: 6px;
+    }
+    button:hover {
+      background-color: #b89275;
     }
     #result {
-      margin-top: 15px;
+      margin-top: 20px;
       word-break: break-word;
-      background-color: #f8f8f8;
+      font-size: 14px;
+      background: #f7f3ee;
       padding: 10px;
-      border: 1px solid #ccc;
+      border: 1px solid #d7c7b8;
       border-radius: 6px;
     }
     #copyBtn {
+      display: none;
+      background-color: #9f826c;
       margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <h2>🍗 KFC 問卷連結產生器</h2>
-  <label>門市代碼 </label>
-  <input type="text" id="store" placeholder="門市代碼"/>
-  <label>點餐方式 </label>
-  <select id="k">
-    <option value="2">預定</option>
-    <option value="3">點餐機</option>
-    <option value="6">現場點餐</option>
-  </select>
-  <label>訂購方式 </label>
-  <select id="o">
-    <option value="1">內用</option>
-    <option value="2">外帶</option>
-    <option value="3">車道</option>
-  </select>
-  <button onclick="generateLink()">🎯 產生問卷連結</button>
-  <div id="result"></div>
-  <button id="copyBtn" onclick="copyToClipboard()" style="display:none">📋 複製問卷連結</button>
+
+  <div class="container">
+    <h2>🍵 KFC 問卷連結產生器</h2>
+
+    <label>門市代碼</label>
+    <input type="text" id="store" maxlength="4" placeholder="請輸入 4 碼門市代碼" />
+
+    <label>點餐方式（O）</label>
+    <select id="o">
+      <option value="2">2 = 櫃檯</option>
+      <option value="3">3 = 點餐機</option>
+      <option value="4" selected>4 = 網訂</option>
+    </select>
+
+    <label>訂購方式（K）</label>
+    <select id="k">
+      <option value="1">1 = 內用</option>
+      <option value="2" selected>2 = 外帶</option>
+    </select>
+
+    <button onclick="generateLink()">🎯 產生問卷連結</button>
+
+    <div id="result"></div>
+    <button id="copyBtn" onclick="copyLink()">📋 複製連結</button>
+  </div>
 
   <script>
-    function base64Encode(obj) {
-      return btoa(JSON.stringify(obj)).replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
-    }
-
-    function getPrefix(storeCode) {
-      if (/^TWB|^TWI/.test(storeCode)) return storeCode.slice(0, 3);
-      if (/^5\d{2}$/.test(storeCode)) return "TWB";
-      return "TWI";
-    }
-
-    function getPureStoreCode(storeCode) {
-      return storeCode.replace(/^TWB|^TWI/, '');
-    }
-
     function generateLink() {
-      const input = document.getElementById('store').value.trim();
-      if (!input) {
-        alert('請輸入門市代碼');
+      const store = document.getElementById('store').value.trim();
+      const o = document.getElementById('o').value;
+      const k = document.getElementById('k').value;
+
+      if (!store || store.length !== 4) {
+        alert("請輸入 4 碼門市代碼！");
         return;
       }
-
-      const k = document.getElementById('k').value;
-      const o = document.getElementById('o').value;
-      const prefix = getPrefix(input);
-      const store = getPureStoreCode(input);
 
       const now = new Date();
       const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
@@ -103,7 +119,7 @@
       const T = `${H}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
 
       const data = {
-        S: `886K${prefix}${store}`,
+        S: `886KTWI${store}`,
         U,
         D,
         T,
@@ -114,20 +130,25 @@
         I: "2"
       };
 
-      const q_eed = base64Encode(data);
+      const q_eed = btoa(JSON.stringify(data))
+        .replace(/\+/g, "-")
+        .replace(/\//g, "_")
+        .replace(/=+$/, "");
+
       const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${q_eed}`;
 
-      document.getElementById('result').innerHTML = `<strong>產生連結：</strong><br><a href="${link}" target="_blank">${link}</a>`;
+      document.getElementById('result').innerHTML = `<strong>🔗 問卷連結：</strong><br><a href="${link}" target="_blank">${link}</a>`;
       document.getElementById('copyBtn').style.display = 'block';
       document.getElementById('copyBtn').setAttribute('data-link', link);
     }
 
-    function copyToClipboard() {
+    function copyLink() {
       const link = document.getElementById('copyBtn').getAttribute('data-link');
       navigator.clipboard.writeText(link).then(() => {
-        alert('✅ 已複製到剪貼簿！');
+        alert('✅ 已複製問卷連結！');
       });
     }
   </script>
+
 </body>
 </html>
