--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
     <h2>🍵 KFC 問卷連結產生器</h2>
 
     <label>門市代碼</label>
-    <input type="text" id="store" maxlength="4" placeholder="請輸入 4 碼門市代碼" />
+    <input type="text" id="store" maxlength="4" placeholder="請輸入門市代碼" />
 
-    <label>點餐方式（O）</label>
+    <label>點餐方式</label>
     <select id="o">
       <option value="2">2 = 櫃檯</option>
       <option value="3">3 = 點餐機</option>
       <option value="4" selected>4 = 網訂</option>
     </select>
 
-    <label>訂購方式（K）</label>
+    <label>訂購方式</label>
     <select id="k">
       <option value="1">1 = 內用</option>
       <option value="2" selected>2 = 外帶</option>
@@ -104,7 +104,7 @@
       const k = document.getElementById('k').value;
 
       if (!store || store.length !== 4) {
-        alert("請輸入 4 碼門市代碼！");
+        alert("請輸入門市代碼！");
         return;
       }
 
