--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>KFC 問卷連結產生器</title>
+  <title>問卷連結產生器</title>
   <style>
     body {
       font-family: "Microsoft JhengHei", Arial, sans-serif;
@@ -73,7 +73,7 @@
 <body>
 
   <div class="container">
-    <h2>🍵 KFC 問卷連結產生器</h2>
+  <h2>問卷連結產生器</h2>
 
     <label>門市代碼</label>
     <input type="text" id="store" maxlength="4" placeholder="請輸入門市代碼" />
