--- a/index.html
+++ b/index.html
@@ -6,63 +6,75 @@
   <title>問卷連結產生器</title>
   <style>
     body {
-      font-family: "Microsoft JhengHei", Arial, sans-serif;
-      background-color: #fdf8f3; /* 米白底 */
+      font-family: "Microsoft JhengHei", sans-serif;
+      background-color: #fdf8f3; /* 米白 */
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
       padding: 30px;
     }
+
+    .container {
+      background-color: #fffaf2;
+      padding: 30px 25px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.05);
+      width: 100%;
+      max-width: 420px;
+    }
+
     h2 {
       text-align: center;
-      color: #a9745a; /* 奶茶色 */
+      color: #8b5e3c; /* 深咖啡色 */
+      margin-bottom: 30px;
     }
-    .container {
-      width: 100%;
-      max-width: 400px;
-      background: #fffaf2;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.05);
-    }
+
     label {
       display: block;
-      margin-top: 20px;
-      font-weight: bold;
+      margin-top: 16px;
+      margin-bottom: 6px;
       color: #5b3e2b;
+      font-weight: bold;
     }
-    select, input {
+
+    input, select {
       width: 100%;
       padding: 12px;
-      margin-top: 6px;
       font-size: 16px;
+      font-weight: bold;
+      color: #000;
+      background-color: #fffdf9;
       border: 1px solid #decfc1;
       border-radius: 6px;
-      background-color: #fffdf9;
+      box-sizing: border-box;
     }
+
     button {
       width: 100%;
       padding: 14px;
-      font-size: 16px;
       margin-top: 30px;
-      background-color: #c8a68a; /* 奶茶色 */
+      font-size: 16px;
+      background-color: #c8a68a;
       color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      font-weight: bold;
     }
+
     button:hover {
       background-color: #b89275;
     }
+
     #result {
       margin-top: 20px;
-      word-break: break-word;
       font-size: 14px;
       background: #f7f3ee;
       padding: 10px;
       border: 1px solid #d7c7b8;
       border-radius: 6px;
+      word-break: break-word;
     }
+
     #copyBtn {
       display: none;
       background-color: #9f826c;
@@ -73,28 +85,28 @@
 <body>
 
   <div class="container">
-  <h2>問卷連結產生器</h2>
+    <h2>問卷連結產生器</h2>
 
-    <label>門市代碼</label>
-    <input type="text" id="store" maxlength="4" placeholder="請輸入門市代碼" />
+    <label for="store">門市</label>
+    <input type="text" id="store" maxlength="4" placeholder="請輸入門市代碼"/>
 
-    <label>點餐方式</label>
+    <label for="o">點餐方式</label>
     <select id="o">
-      <option value="2">2 = 櫃檯</option>
-      <option value="3">3 = 點餐機</option>
-      <option value="4" selected>4 = 網訂</option>
+      <option value="2">櫃檯</option>
+      <option value="3">點餐機</option>
+      <option value="4" selected>網訂</option>
     </select>
 
-    <label>訂購方式</label>
+    <label for="k">訂購方式</label>
     <select id="k">
-      <option value="1">1 = 內用</option>
-      <option value="2" selected>2 = 外帶</option>
+      <option value="1">內用</option>
+      <option value="2" selected>外帶</option>
     </select>
 
     <button onclick="generateLink()">🎯 產生問卷連結</button>
 
     <div id="result"></div>
-    <button id="copyBtn" onclick="copyLink()">📋 複製連結</button>
+    <button id="copyBtn" onclick="copyLink()">📋 複製問卷連結</button>
   </div>
 
   <script>
@@ -145,7 +157,7 @@
     function copyLink() {
       const link = document.getElementById('copyBtn').getAttribute('data-link');
       navigator.clipboard.writeText(link).then(() => {
-        alert('✅ 已複製問卷連結！');
+        alert('✅ 問卷連結已複製到剪貼簿！');
       });
     }
   </script>
