--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   <div class="container">
     <h2>問卷連結產生器</h2>
 
-    <label for="store">門市</label>
-    <input type="text" id="store" maxlength="4" placeholder="請輸入門市代碼"/>
+    <label for="store">門市代碼</label>
+    <input type="text" id="store" maxlength="3" placeholder="請輸入門市代碼"/>
 
     <label for="o">點餐方式</label>
     <select id="o">
@@ -115,10 +115,13 @@
       const o = document.getElementById('o').value;
       const k = document.getElementById('k').value;
 
-      if (!store || store.length !== 3) {
-        alert("請輸入門市代碼！");
+      if (!store || store.length < 1 || store.length > 3) {
+        alert("請輸入正確門市代碼！");
         return;
       }
+
+      // 判斷 prefix
+      const prefix = store.startsWith('5') ? 'TWB' : 'TWI';
 
       const now = new Date();
       const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
@@ -127,11 +130,11 @@
       const rand1 = String(Math.floor(Math.random() * 90) + 10);
       const rand2 = String(Math.floor(Math.random() * 50) + 10);
       const rand3 = String(Math.floor(Math.random() * 89) + 11);
-      const U = `TWI${store}${D}${H}${rand1}${rand2}${rand3}`;
+      const U = `${prefix}${store}${D}${H}${rand1}${rand2}${rand3}`;
       const T = `${H}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
 
       const data = {
-        S: `886KTWI${store}`,
+        S: `886K${prefix}${store}`,
         U,
         D,
         T,
