--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h2>問卷連結產生器</h2>
 
     <label for="store">門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="請輸入 3 碼門市代碼" value="226" />
+    <input type="text" id="store" maxlength="3" placeholder="請輸入 3 碼門市代碼" value="" />
 
     <label for="meal">用餐方式</label>
     <select id="meal" onchange="handleMealChange()">
