--- a/index.html
+++ b/index.html
@@ -7,63 +7,54 @@
   <style>
     body {
       font-family: "Microsoft JhengHei", sans-serif;
-      background-color: #fdf8f3;
+      background-color: #fdf6ef;
       display: flex;
       justify-content: center;
       padding: 30px;
     }
-
     .container {
-      background-color: #fffaf2;
+      background-color: #fff8ee;
       padding: 30px 25px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.05);
       width: 100%;
       max-width: 420px;
-      text-align: center;
     }
-
     h2 {
+      text-align: center;
       font-size: 22px;
       font-weight: bold;
-      margin-bottom: 24px;
     }
-
     label {
       display: block;
       margin-top: 16px;
       margin-bottom: 6px;
       font-weight: bold;
+      text-align: center;
     }
-
     input, select {
-      width: 200px;
-      padding: 8px;
+      width: 96%;
+      padding: 6px;
       border-radius: 6px;
       border: 1px solid #ccc;
       font-size: 16px;
       text-align: center;
-      box-sizing: border-box;
       font-family: "Microsoft JhengHei", sans-serif;
-      font-weight: bold;
     }
-
     button {
       margin-top: 24px;
       width: 100%;
       padding: 10px;
-      background-color: #d9b99b;
+      background-color: #d6bfa6;
       color: white;
       font-weight: bold;
       font-size: 18px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
-
     button:hover {
-      background-color: #caa882;
+      background-color: #bfa68c;
     }
   </style>
 </head>
@@ -72,10 +63,10 @@
     <h2>問卷連結產生器</h2>
 
     <label for="store">門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="請輸入 3 碼門市代碼" value="" />
+    <input type="text" id="store" maxlength="3" placeholder="請輸入 3 碼門市代碼" value="226" />
 
     <label for="meal">用餐方式</label>
-    <select id="meal" onchange="handleMealChange()">
+    <select id="meal" onchange="lockOrder()">
       <option value="2">內用</option>
       <option value="4" selected>外帶</option>
       <option value="1">外送</option>
@@ -83,20 +74,22 @@
 
     <label for="order">點餐方式</label>
     <select id="order">
-      <option value="2">櫃台</option>
+      <option value="2">網訂</option>
       <option value="3">點餐機</option>
-      <option value="4">網訂</option>
+      <option value="4">櫃台</option>
     </select>
 
-    <button onclick="generateAndCopy()">🚀一鍵產生並複製問卷連結</button>
+    <button onclick="generateAndCopy()">一鍵產生並複製問卷連結</button>
   </div>
 
   <script>
-    function handleMealChange() {
-      const meal = document.getElementById('meal').value;
-      const order = document.getElementById('order');
-      if (meal === '1') {
-        order.value = '4';
+    const safeSuffixes = ["1146","1241","1126","13000","13470","13490","13300"];
+
+    function lockOrder() {
+      const meal = document.getElementById("meal").value;
+      const order = document.getElementById("order");
+      if (meal === "1") {
+        order.value = "2";  // 外送固定為網訂
         order.disabled = true;
       } else {
         order.disabled = false;
@@ -105,10 +98,9 @@
 
     function generateAndCopy() {
       const store = document.getElementById('store').value.trim();
-      const m = document.getElementById('meal').value;
       const o = document.getElementById('order').value;
-      const k = (m === '1') ? "1" : "2"; // 外送固定K=1，其餘K=2
-      const tail = (m === '1') ? "0004" : "0053";
+      const m = document.getElementById('meal').value;
+      const k = "2";
 
       if (!store || store.length !== 3 || isNaN(store)) {
         alert("請輸入有效的 3 碼門市代碼");
@@ -116,11 +108,16 @@
       }
 
       const prefix = store.startsWith('5') ? 'TWB' : 'TWI';
-      const now = new Date();
-      const date = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1);
-      const d = date.toISOString().slice(0, 10).replace(/-/g, '');
-      const t = "133000";
-      const u = `${prefix}${store}${d}${t}${tail}`;
+      const date = new Date();
+      const d = new Date(date.getFullYear(), date.getMonth(), date.getDate() - 1)
+                   .toISOString().slice(0, 10).replace(/-/g, '');
+
+      const s = String(Math.floor(Math.random() * 13) + 10).padStart(2, '0');
+      const t = s + String(Math.floor(Math.random() * 60)).padStart(2, '0') +
+                     String(Math.floor(Math.random() * 60)).padStart(2, '0');
+
+      const safeSuffix = safeSuffixes[Math.floor(Math.random() * safeSuffixes.length)];
+      const u = `${prefix}${store}${d}${safeSuffix}`;
 
       const obj = {
         S: `886K${prefix}${store}`,
