--- a/index.html
+++ b/index.html
@@ -2,122 +2,128 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>問卷連結產生器</title>
+  <title>KFC 問卷連結產生器</title>
   <style>
     body {
       font-family: "Microsoft JhengHei", sans-serif;
-      background-color: #fdf6ef;
+      background-color: #f3e8dc;
       display: flex;
       justify-content: center;
       padding: 30px;
     }
     .container {
-      background-color: #fff8ee;
+      background-color: #fffaf2;
       padding: 30px 25px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.05);
       width: 100%;
-      max-width: 420px;
+      max-width: 460px;
+      text-align: center;
     }
     h2 {
-      text-align: center;
-      font-size: 22px;
+      font-size: 24px;
       font-weight: bold;
+      color: #5c4436;
+      margin-bottom: 20px;
     }
     label {
       display: block;
       margin-top: 16px;
       margin-bottom: 6px;
       font-weight: bold;
-      text-align: center;
+      color: #5c4436;
     }
     input, select {
-      width: 96%;
-      padding: 6px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      width: 80%;
+      padding: 8px;
+      margin: auto;
       font-size: 16px;
+      font-weight: bold;
       text-align: center;
-      font-family: "Microsoft JhengHei", sans-serif;
+      border-radius: 6px;
+      border: 1px solid #b59b84;
+      background-color: #fcf6f0;
+      display: block;
     }
     button {
       margin-top: 24px;
       width: 100%;
-      padding: 10px;
-      background-color: #d6bfa6;
+      padding: 12px;
+      background-color: #d9b99b;
       color: white;
       font-weight: bold;
       font-size: 18px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
     button:hover {
-      background-color: #bfa68c;
+      background-color: #caa882;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>問卷連結產生器</h2>
+    <h2>KFC 問卷連結產生器</h2>
 
     <label for="store">門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="請輸入 3 碼門市代碼" value="" />
+    <input type="text" id="store" maxlength="3" placeholder="" />
 
-    <label for="meal">用餐方式</label>
-    <select id="meal" onchange="lockOrder()">
-      <option value="2">內用</option>
-      <option value="4" selected>外帶</option>
-      <option value="1">外送</option>
+    <label for="type">用餐方式</label>
+    <select id="type" onchange="lockMethodIfDelivery()">
+      <option value="1">內用</option>
+      <option value="2">外帶</option>
+      <option value="4">外送</option>
     </select>
 
-    <label for="order">點餐方式</label>
-    <select id="order">
-      <option value="2">網訂</option>
+    <label for="method">點餐方式</label>
+    <select id="method">
+      <option value="2">櫃台</option>
       <option value="3">點餐機</option>
-      <option value="4">櫃台</option>
+      <option value="4">網訂</option>
     </select>
 
-    <button onclick="generateAndCopy()">一鍵產生並複製問卷連結</button>
+    <button onclick="generateAndCopy()">🚀 產生並複製問卷連結</button>
   </div>
 
   <script>
-    const safeSuffixes = ["1146","1241","1126","13000","13470","13490","13300"];
+    const safeNormalTails = ["10050001", "14480005", "13350004", "12230003"];
+    const safeDeliveryTails = ["18600010", "10050001", "14480005", "13350004"];
 
-    function lockOrder() {
-      const meal = document.getElementById("meal").value;
-      const order = document.getElementById("order");
-      if (meal === "1") {
-        order.value = "2";  // 外送固定為網訂
-        order.disabled = true;
+    function lockMethodIfDelivery() {
+      const type = document.getElementById('type').value;
+      const method = document.getElementById('method');
+      if (type === "4") {
+        method.value = "4";
+        method.disabled = true;
       } else {
-        order.disabled = false;
+        method.disabled = false;
       }
     }
 
     function generateAndCopy() {
       const store = document.getElementById('store').value.trim();
-      const o = document.getElementById('order').value;
-      const m = document.getElementById('meal').value;
+      const type = document.getElementById('type').value;
+      const method = document.getElementById('method').value;
       const k = "2";
+      const prefix = store.startsWith('5') ? 'TWB' : 'TWI';
 
       if (!store || store.length !== 3 || isNaN(store)) {
         alert("請輸入有效的 3 碼門市代碼");
         return;
       }
 
-      const prefix = store.startsWith('5') ? 'TWB' : 'TWI';
-      const date = new Date();
-      const d = new Date(date.getFullYear(), date.getMonth(), date.getDate() - 1)
-                   .toISOString().slice(0, 10).replace(/-/g, '');
+      const today = new Date();
+      const date = new Date(today.getFullYear(), today.getMonth(), today.getDate());
+      const d = date.toISOString().slice(0, 10).replace(/-/g, '');
 
-      const s = String(Math.floor(Math.random() * 13) + 10).padStart(2, '0');
-      const t = s + String(Math.floor(Math.random() * 60)).padStart(2, '0') +
-                     String(Math.floor(Math.random() * 60)).padStart(2, '0');
+      const s = String(Math.floor(Math.random() * 13 + 10)); // s：10-22
+      const randTail = (type === "4" ? safeDeliveryTails : safeNormalTails);
+      const uTail = randTail[Math.floor(Math.random() * randTail.length)];
 
-      const safeSuffix = safeSuffixes[Math.floor(Math.random() * safeSuffixes.length)];
-      const u = `${prefix}${store}${d}${safeSuffix}`;
+      const u = `${prefix}${store}${d}${uTail}`;
+      const t = `${s}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}${String(Math.floor(Math.random() * 60)).padStart(2, '0')}`;
 
       const obj = {
         S: `886K${prefix}${store}`,
@@ -125,8 +131,8 @@
         D: d,
         T: t,
         Country: "TW",
-        O: o,
-        M: m,
+        O: method,
+        M: type,
         K: k
       };
 
@@ -134,7 +140,7 @@
       const link = `https://customer.kfc-listens.com/jfe/form/SV_1R1VSPEYVPlV1JA?Q_EED=${base64}`;
 
       navigator.clipboard.writeText(link).then(() => {
-        alert("問卷連結已複製！");
+        alert("✅ 問卷連結已複製！");
       });
     }
   </script>
