--- a/index.html
+++ b/index.html
@@ -1,145 +1,174 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>KFC 問卷連結產生器</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>小工具🛠️</title>
   <style>
     body {
       font-family: "Microsoft JhengHei", sans-serif;
-      background-color: #fdf3e7;
+      background-color: #f9f3ec;
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
+      padding: 50px 20px;
     }
 
     .container {
-      background-color: #fffaf2;
-      padding: 30px 25px;
+      background-color: #fffaf3;
+      padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.08);
-      width: 50%;
-      min-width: 400px;
-      box-sizing: border-box;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      width: 100%;
+      max-width: 480px;
+      text-align: center;
     }
 
     h2 {
-      font-size: 24px;
-      text-align: center;
-      margin-bottom: 20px;
+      font-size: 26px;
       font-weight: bold;
-      color: #6b4c3b;
+      margin-bottom: 25px;
+      color: #5c4033;
     }
 
     label {
       display: block;
-      margin-top: 16px;
-      margin-bottom: 6px;
+      margin-top: 20px;
       font-weight: bold;
-      color: #5e3d29;
     }
 
-    input, select {
-      width: 100%;
-      padding: 8px;
+    input {
+      width: 70%;
+      padding: 10px;
+      margin-top: 8px;
+      font-size: 18px;
+      border: 1px solid #ccc;
       border-radius: 6px;
-      border: 1px solid #c8b09c;
-      font-size: 16px;
       text-align: center;
       font-weight: bold;
-      box-sizing: border-box;
     }
 
-    button {
-      margin-top: 24px;
-      width: 100%;
-      padding: 12px;
-      background-color: #c8a57d;
-      color: white;
-      font-weight: bold;
-      font-size: 18px;
+    .button-group {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-top: 10px;
+    }
+
+    .button-group button {
+      padding: 10px 18px;
       border: none;
       border-radius: 8px;
+      background-color: #e3c9a9;
+      font-weight: bold;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.2s ease;
     }
 
-    button:hover {
-      background-color: #b8946f;
+    .button-group button.active {
+      background-color: #a47551;
+      color: white;
+    }
+
+    .generate-button {
+      margin-top: 30px;
+      padding: 12px;
+      font-size: 18px;
+      background-color: #b48b65;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>KFC 問卷連結產生器</h2>
+    <h2>小工具🛠️</h2>
 
-    <label for="store">門市代碼</label>
-    <input type="text" id="store" maxlength="3" placeholder="" />
+    <label>門市代碼</label>
+    <input type="text" id="store" placeholder="">
 
-    <label for="m">用餐方式</label>
-    <select id="m" onchange="toggleOrderOption()">
-      <option value="1">內用</option>
-      <option value="2">外帶</option>
-      <option value="4">外送</option>
-    </select>
+    <label>用餐方式</label>
+    <div class="button-group" id="mealType">
+      <button onclick="selectOption(this, 'meal')">內用</button>
+      <button onclick="selectOption(this, 'meal')">外帶</button>
+      <button onclick="selectOption(this, 'meal')">外送</button>
+    </div>
 
-    <label for="o">點餐方式</label>
-    <select id="o">
-      <option value="2">櫃台</option>
-      <option value="3">點餐機</option>
-      <option value="4">網訂</option>
-    </select>
+    <label>點餐方式</label>
+    <div class="button-group" id="orderType">
+      <button onclick="selectOption(this, 'order')">點餐機</button>
+      <button onclick="selectOption(this, 'order')">櫃檯</button>
+      <button onclick="selectOption(this, 'order')">網訂</button>
+    </div>
 
-    <button onclick="generateAndCopy()">🚀 一鍵產生並複製問卷連結</button>
+    <button class="generate-button" onclick="generateLink()">🚀一鍵產生並複製問卷連結</button>
   </div>
 
   <script>
-    const normalTail = ['13350004', '12230003', '18600010', '114646', '114241', '114126'];
-    const deliveryTail = ['10050001', '14480005', '13350004', '12230003', '18600010'];
+    let meal = "";
+    let order = "";
 
-    function toggleOrderOption() {
-      const m = document.getElementById('m').value;
-      const o = document.getElementById('o');
-      if (m === '4') {
-        o.value = '4';
-        o.disabled = true;
+    const normalTailCodes = ["10050001", "14480005", "13350004", "12230003"];
+    const deliveryTailCodes = ["18600010", "13450002", "15200006", "13850008"];
+
+    function selectOption(button, type) {
+      const group = type === 'meal' ? 'mealType' : 'orderType';
+      const buttons = document.querySelectorAll(`#${group} button`);
+      buttons.forEach(b => b.classList.remove('active'));
+      button.classList.add('active');
+
+      if (type === 'meal') {
+        meal = button.innerText;
+        if (meal === "外送") {
+          order = "網訂";
+          const orderButtons = document.querySelectorAll("#orderType button");
+          orderButtons.forEach(b => {
+            b.classList.remove('active');
+            if (b.innerText === "網訂") b.classList.add('active');
+          });
+        }
       } else {
-        o.disabled = false;
+        order = button.innerText;
       }
     }
 
-    function generateAndCopy() {
-      const store = document.getElementById('store').value.trim();
-      const m = document.getElementById('m').value;
-      const o = document.getElementById('o').value;
-      const k = "2";
-
-      if (!store || store.length !== 3 || isNaN(store)) {
+    function generateLink() {
+      const store = document.getElementById("store").value.trim();
+      if (!store || store.length !== 3) {
         alert("請輸入有效的 3 碼門市代碼");
         return;
       }
 
-      const prefix = store.startsWith('5') ? 'TWB' : 'TWI';
       const now = new Date();
-      const d = new Date(now.getFullYear(), now.getMonth(), now.getDate() - 1).toISOString().slice(0, 10).replace(/-/g, '');
+      now.setDate(now.getDate() - 1);
+      const yyyy = now.getFullYear();
+      const mm = String(now.getMonth() + 1).padStart(2, '0');
+      const dd = String(now.getDate()).padStart(2, '0');
+      const date = `${yyyy}${mm}${dd}`;
 
-      // 隨機尾碼（根據是否為外送）
-      const uTail = (m === '4' ? deliveryTail : normalTail)[Math.floor(Math.random() * (m === '4' ? deliveryTail.length : normalTail.length))];
+      const s = String(Math.floor(Math.random() * 13) + 10); // 10-22
+      const rand1 = Math.floor(Math.random() * 90 + 10);
+      const rand2 = Math.floor(Math.random() * 50 + 10);
+      const rand3 = Math.floor(Math.random() * 89 + 11);
+      const safeTail = meal === "外送"
+        ? deliveryTailCodes[Math.floor(Math.random() * deliveryTailCodes.length)]
+        : normalTailCodes[Math.floor(Math.random() * normalTailCodes.length)];
 
-      const u = `${prefix}${store}${d}${uTail}`;
-      const t = uTail;
-
+      const prefix = store.startsWith('5') ? 'TWB' : 'TWI';
+      const u = `${prefix}${store}${date}${safeTail}`;
+      const t = `${s}${String(rand1).padStart(2, '0')}${String(rand2).padStart(2, '0')}`;
       const obj = {
         S: `886K${prefix}${store}`,
         U: u,
-        D: d,
+        D: date,
         T: t,
         Country: "TW",
-        O: o,
-        M: m,
-        K: k
+        O: meal === "內用" ? "1" : meal === "外帶" ? "2" : "4",
+        M: order === "點餐機" ? "3" : order === "櫃檯" ? "2" : "1",
+        K: "2"
       };
 
       const base64 = btoa(JSON.stringify(obj));
